<resources>
    <string name="app_name">kotlin-To-do-List</string>
    <string name="more_button">More information</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="return_text">Return</string>
    <string name="edit_text">Edit</string>
    <string name="checkbox">Checkbox</string>
    <string name="start_to_end_time">%1$s to %2$s</string>
    <string name="add_new_task">add new task</string>
    <string name="starting_time_text">Starting Time</string>
    <string name="date_text">Date</string>
    <string name="ending_time_text">Ending Time</string>
    <string name="priority_text">Priority</string>
    <string name="periodicity_text">Periodicity</string>
    <string name="Title_text">Title*</string>
    <string name="description_text">Description</string>
    <string name="edit_task_text">Edit Task</string>
    <string name="delete_text">Delete</string>
    <string name="action_all_tasks">All Results</string>
    <string name="action_today_tasks">Today</string>
    <string name="title_create_task">Create Task</string>
    <string name="tile_edit_task">Edit Task</string>
    <string name="priority_description_text">%1$s priority</string>
    <string name="time_description_text">Start at %1$s until %2$s</string>
    <string name="filter_results_text">Filter Results</string>
    <string name="edit_task_date_text">%1$d/%2$d/%3$d</string>
    <string name="blank_input_error_text">%1$s can\'t be  blank</string>
    <string name="invalid_date_input_error_text">Date can\'t be in the past</string>
    <string name="invalid_startingTime_input_error_text">"StartingTime can't be in past "</string>
    <string name="invalid_endingTime_input_error_text">Ending time can\'t be before start</string>
</resources>