<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.EditTaskFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/Title_text"
                tools:text="teste1" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/et_task_starting_time"
            app:layout_constraintStart_toStartOf="@id/et_task_title"
            app:layout_constraintTop_toBottomOf="@id/et_task_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/date_text"
                android:focusable="false"
                android:inputType="date"
                tools:text="1/09/2021" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_starting_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_between_elements"
            app:layout_constraintEnd_toStartOf="@id/et_task_ending_time"
            app:layout_constraintStart_toEndOf="@id/et_task_date"
            app:layout_constraintTop_toTopOf="@id/et_task_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/starting_time_text"
                android:inputType="time"
                android:focusable="false"
                tools:text="12:00" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_ending_time"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/et_task_title"
            app:layout_constraintStart_toEndOf="@id/et_task_starting_time"
            app:layout_constraintTop_toTopOf="@id/et_task_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:hint="@string/ending_time_text"
                android:inputType="time"
                tools:text="23:00" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_priority"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            app:layout_constraintEnd_toStartOf="@id/et_task_periodicity"
            app:layout_constraintStart_toStartOf="@id/et_task_title"
            app:layout_constraintTop_toBottomOf="@id/et_task_date">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/priority_text"
                android:inputType="text"
                android:focusable="false"
                tools:text="Unskippable" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_task_periodicity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/et_task_title"
            app:layout_constraintStart_toEndOf="@id/et_task_priority"
            app:layout_constraintTop_toTopOf="@id/et_task_priority">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/periodicity_text"
                android:inputType="text"
                tools:text="Weekly" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/et_task_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/side_margin"
            app:layout_constraintBottom_toTopOf="@id/cancel_button"
            app:layout_constraintStart_toStartOf="@id/et_task_title"
            app:layout_constraintTop_toBottomOf="@id/et_task_priority">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="text"
                android:scrollbars="vertical"
                android:hint="@string/description_text"
                tools:text="1-\n2-\n3-\n" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_save_button"
            app:layout_constraintStart_toStartOf="@id/et_task_title" />

        <Button
            android:id="@+id/bt_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_task_title"
            app:layout_constraintStart_toEndOf="@id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>